fix: overflow of the places section on small screens

--- a/blocks/lead.css
+++ b/blocks/lead.css
@@ -1,6 +1,7 @@
 .lead {
   width: 100%;
   padding: 0 80px;
+  min-width: 320px;
 
   display: flex;
   align-items: center;
@@ -85,5 +86,9 @@
     font-size: 16px;
     line-height: 1.3;
     padding: 15px 0 0;
+  }
+
+  .lead__image {
+    width: calc(100% - 80px);
   }
 }
